移除java21中才有的接口和特性