@@ -181,7 +181,7 @@ public class CrystalPulverizerRecipeBuilder implements RecipeBuilder
 
         if (!items.isEmpty())
         {
-            addAutoUnlockPredicateForItem(items.getFirst());
+            addAutoUnlockPredicateForItem(items.get(0));
         }
     }
 
