@@ -95,11 +95,11 @@ public class CrystalPulverizerRecipeCategory extends BasicEmiRecipe
 
         int xIn = 22;
         int yIn = 21;
-        widgets.addSlot(this.inputs.getFirst(), xIn, yIn).drawBack(false);
+        widgets.addSlot(this.inputs.get(0), xIn, yIn).drawBack(false);
 
         int xOut = 85;
         int yOut = yIn;
-        widgets.addSlot(this.outputs.getFirst(), xOut, yOut).recipeContext(this).drawBack(false);
+        widgets.addSlot(this.outputs.get(0), xOut, yOut).recipeContext(this).drawBack(false);
 
         widgets.addDrawable(0, 0, 0, 0, energyRateBar::renderWidget);
         widgets.addDrawable(0, 0, 0, 0, workingProgressBar::renderWidget);
